
	- 

	- The truncate-ranks setting formerly would only work with prelim rounds
	  but not in elims or finals.  Now it will work no matter the type of round
	  if it is set in the tiebreaker set.

	- The mass judge assigner under Paneling -> Judges is now capable of
	  assigning judges for all rounds in a round robin at once.  Warning, it is
	  not particularly intelligent about it (yet) and will not always fill in all
	  judge slots where it is possible to do so, but this beats having to hit
	  the judge button on every last round.

	- The round robin paneler now will assign sides in a more fair manner, such
	  that round robin teams should not have to debate the same side more than
	  2x in a row.

	- Several bug fixes to the automatic powermatcher have also been deployed.

	- Several bug fixes to the manual powermatcher have been deployed

	- The check sheet formatting is now not nearly as crazy as it was before.


==CHANGES RELEASED 10.30.2014==

	- You may have noticed a lot of weird performance issues and error messages
	  about not being able to connect to a database and some missing ballots.
	  All of these stemmed from being hosted on Amazon's cloud providers, which
	  did work quite well for me on a previous project, but on this one was
	  delivering abysmal performance, weird errors and was also charging the
	  NSDA more than it was clearly worth.

	  Since the tabroom dedicated server was able to handle about 8x as much
	  traffic as the amazon setup was in its "max" configuration without
	  breaking a sweat, I've moved the site back to it.  I've already noticed a
	  vast speed improvement and we're no longer getting those errors.  I hope
	  this works better for you as well.

	- Past tournaments will appear in your registrations for a week with an
	  easier link to the results reports.  You'll also be able to see online
	  ballots all on one screen and download a PDF of them with each entry on a
	  single page for easier collation and distribution.
