@@ -55,11 +55,13 @@
 
 	my $points;
 	my $ranks;
+	my $winloss;
 
 	if ($panel && $panel->round->tb_set) { 
 		foreach my $tb ($panel->round->tb_set->tiebreaks) {
 			$points++ if $tb->name eq "points";
 			$ranks++ if $tb->name eq "ranks";
+			$winloss++ if $tb->name eq "ballot";
 		}
 	} else { 
 		my @round = sort {$a->name <=> $b->name} $event->rounds;
@@ -68,6 +70,7 @@
 			foreach my $tb ($sample->tb_set->tiebreaks) {
 				$points++ if $tb->name eq "points";
 				$ranks++ if $tb->name eq "ranks";
+				$winloss++ if $tb->name eq "ballot";
 			}
 		} else { 
 			$points++;
@@ -114,6 +117,15 @@
 		print TEXOUT "{\\LARGE \\bf ".&Tab::texify(substr($judge->last.", ".$judge->first, 0, 18))."}" if $judge;
 		print TEXOUT "{\\Large \\bf Judge: \\makebox[1.75in]{\\hrulefill}}" unless $judge;
 		print TEXOUT "} \\\\ \n";
+
+		unless ($winloss || $ranks || $points) { 
+			print TEXOUT "\\medskip \n ";
+			print TEXOUT "\\newline\n ";
+			print TEXOUT "\\begin{center}\n";
+			print TEXOUT "{\\LARGE \\bf \\color{red} You have no tiebreakers set so this ballot is blank.  Set tiebreakers for each round for better results! }";
+			print TEXOUT "\\end{center}\n";
+		}
+
 	} else { 
 		print TEXOUT "{\\bf Room: \\makebox[1.5in]{\\hrulefill} \\hfill Round: \\makebox[.5in]{\\hrulefill} \\hfill Judge: \\makebox[1.5in]{\\hrulefill}}\n\\medskip\\newline\n";
 	}
@@ -280,7 +292,7 @@
 
 		my $order = 1;
 
-		if (@affs) { 
+		if (@affs && ($points || $ranks)) { 
 			foreach my $speaker (@affs) { 
 				print TEXOUT " & " if $max_entry > 1; 
 				print TEXOUT Tab::texify($speaker->first." ".$speaker->last." ");
@@ -290,7 +302,8 @@
 				print TEXOUT "\\\\ \n";
 				print TEXOUT "\\hline\n" unless $ld;
 			}
-		} else { 
+
+		} elsif ($points || $ranks) { 
 
 			my $order = 1;
 			foreach (1 .. $max_entry) { 
@@ -363,14 +376,14 @@
 		}
 
 		print TEXOUT "|" unless $ld;
-		print TEXOUT "}\n";
+		print TEXOUT " }\n";
 		print TEXOUT "\\hline\n" unless $ld;
 		print TEXOUT $first_row."\\\\ \n";
 		print TEXOUT "\\hline\n" unless $ld;
 
 		$order = 1;
 
-		if (@negs) { 
+		if (@negs && ($points || $ranks)) { 
 			foreach my $speaker (@negs) { 
 				print TEXOUT " & " if $max_entry > 1;
 				print TEXOUT Tab::texify($speaker->first." ".$speaker->last." ");
@@ -380,7 +393,7 @@
 				print TEXOUT "\\\\ \n";
 				print TEXOUT "\\hline\n" unless $ld;
 			}
-		} else { 
+		} elsif ($points || $ranks) { 
 
 			foreach (1 .. $max_entry) { 
 
@@ -400,25 +413,33 @@
 		print TEXOUT "\\newline\n";
 	}
 
+	if ($winloss) { 
+
+		print TEXOUT "\\begin{minipage}[c][][r]{7in}\n";
+		print TEXOUT "\\begin{center}\n";
+		print TEXOUT "\\vspace{.3in}\n";
+		print TEXOUT "\\normalsize\n";
+		print TEXOUT "Winner: \\makebox[2.5in]{\\hrulefill} debating on the \\makebox[1in]{\\hrulefill}\n";
+		print TEXOUT "\\hspace{.15in} \\footnotesize Low point win? \\makebox[.5in]{\\hrulefill} \n" if $lpw &! $elim;
+		print TEXOUT "\n";
+		print TEXOUT "\\scriptsize\n";
+
+		if ($elim) { 
+			print TEXOUT "\\makebox[1.25in]{}School/Team\\makebox[2.3in]{} Side (Aff or Neg)" unless $event->type eq "pf";
+			print TEXOUT "\\makebox[1.25in]{}School/Team\\makebox[2in]{} Side (Pro or Con)" if $event->type eq "pf"; 
+		} else { 
+			print TEXOUT "\\makebox[.65in]{}School/Team\\makebox[2.3in]{} Side (Aff or Neg)" unless $event->type eq "pf";
+			print TEXOUT "\\makebox[.85in]{}School/Team\\makebox[2.3in]{} Side (Pro or Con)" if $event->type eq "pf"; 
+			print TEXOUT "\\makebox[1.25in]{}" if $lpw;
+		}
+		print TEXOUT "\n\n";
+		print TEXOUT "\\vspace{.25in}\n";
+		print TEXOUT "\\end{center}\n";
+		print TEXOUT "\\end{minipage}\n\n";
+	}
+
 	print TEXOUT "\\begin{minipage}[c][][r]{7in}\n";
 	print TEXOUT "\\begin{center}\n";
-	print TEXOUT "\\vspace{.3in}\n";
-	print TEXOUT "\\normalsize\n";
-	print TEXOUT "Winner: \\makebox[2.5in]{\\hrulefill} debating on the \\makebox[1in]{\\hrulefill}\n";
-	print TEXOUT "\\hspace{.15in} \\footnotesize Low point win? \\makebox[.5in]{\\hrulefill} \n" if $lpw &! $elim;
-	print TEXOUT "\n";
-
-	print TEXOUT "\\scriptsize\n";
-	if ($elim) { 
-		print TEXOUT "\\makebox[1.25in]{}School/Team\\makebox[2.3in]{} Side (Aff or Neg)" unless $event->type eq "pf";
-		print TEXOUT "\\makebox[1.25in]{}School/Team\\makebox[2in]{} Side (Pro or Con)" if $event->type eq "pf"; 
-	} else { 
-		print TEXOUT "\\makebox[.65in]{}School/Team\\makebox[2.3in]{} Side (Aff or Neg)" unless $event->type eq "pf";
-		print TEXOUT "\\makebox[.85in]{}School/Team\\makebox[2.3in]{} Side (Pro or Con)" if $event->type eq "pf"; 
-		print TEXOUT "\\makebox[1.25in]{}" if $lpw;
-	}
-	print TEXOUT "\n\n";
-	print TEXOUT "\\vspace{.25in}\n";
 	print TEXOUT "Signature:  \\makebox[3.25in]{\\hrulefill} ";
 	print TEXOUT "School: \\makebox[2in]{\\hrulefill}" if $event->type eq "pf";
 	print TEXOUT "\n\n";
