@@ -237,12 +237,12 @@
 
 		print TEXOUT "\\noindent\n";
 		print TEXOUT "\\begin{minipage}{7.in}";
-		print TEXOUT "\\begin{minipage}{1.5in}";
+		print TEXOUT "\\begin{minipage}{2.4in}";
 		print TEXOUT "{\\bf \\large ".$event->name."}\n\n";
 		print TEXOUT "{\\normalsize ".&Tab::texify($entry_name{$entry})." }\n";
 		print TEXOUT "\\end{minipage}\n\\hspace{.25in}\n"; 
 
-		print TEXOUT "\\truncate{1.75in}{\\bf \\large ".&Tab::texify($entry_school_name{$entry})." } \n";
+		print TEXOUT "\\truncate{1.5in}{\\bf \\large ".&Tab::texify($entry_school_name{$entry})." } \n";
 		print TEXOUT "\\hfill\n"; 
 		print TEXOUT "{\\huge \\bf ".&Tab::texify($entry_code{$entry})."}\n";
 		print TEXOUT "\\vspace{.03in}\n";
