@@ -58,11 +58,15 @@
 		print TEXOUT "\\hline \\hline \n";
 		print TEXOUT "Affs \\hfill {\\scriptsize (Bold = Winner) } & Negs \\hfill {\\scriptsize (Bold = Winner) }  & Strikes \\\& Conflicts \\\\ \n";
 
-		Tab::Entry->set_sql( has_judged => "
-			select distinct entry.id, ballot.side as side, panel.flight as flight, round.name as roundname, round.label as roundlabel, ballot.id as ballotid, round.flighted as flighted
+		my @rounds;
+		my %round_debater;
+
+		Tab::Entry->set_sql( aff_has_judged => "
+			select distinct entry.*, ballot.side as side, panel.flight as flight, round.name as roundname, round.label as roundlabel, ballot.id as ballotid, round.flighted as flighted
 			from entry, ballot, panel, round
 			where ballot.judge = ?
 			and ballot.bye = 0
+			and ballot.side = 1
 			and ballot.panel = panel.id
 			and panel.bye = 0
 			and entry.id = ballot.entry
@@ -70,7 +74,48 @@
 			order by round.name, panel.flight
 		");
 
-		my @entries = Tab::Entry->search_has_judged($judge->id);
+		my @affs = Tab::Entry->search_aff_has_judged($judge->id);
+
+		foreach my $aff (@affs) { 
+			my $roundstring = substr($aff->roundlabel,0,5) if $aff->roundlabel;
+			$roundstring = "Rnd ".$aff->roundname unless $aff->roundlabel;
+			$roundstring .= " F".$aff->flight if $aff->flighted > 1;
+			push @rounds, $roundstring;
+
+			$round_debater{$roundstring}{"affcode"} = $aff->code;
+			$round_debater{$roundstring}{"affname"} = $aff->name;
+			$round_debater{$roundstring}{"affid"} = $aff->id;
+			$round_debater{$roundstring}{"affballotid"} = $aff->ballotid;
+			undef $aff;
+		}
+
+		Tab::Entry->set_sql( neg_has_judged => "
+			select distinct entry.id, ballot.side as side, panel.flight as flight, round.name as roundname, round.label as roundlabel, ballot.id as ballotid, round.flighted as flighted
+			from entry, ballot, panel, round
+			where ballot.judge = ?
+			and ballot.bye = 0
+			and ballot.side = 2
+			and ballot.panel = panel.id
+			and panel.bye = 0
+			and entry.id = ballot.entry
+			and	panel.round = round.id
+			order by round.name, panel.flight
+		");
+
+		my @negs = Tab::Entry->search_neg_has_judged($judge->id);
+
+		foreach my $neg (@negs) { 
+			my $roundstring = substr($neg->roundlabel,0,5) if $neg->roundlabel;
+			$roundstring = "Rnd ".$neg->roundname unless $neg->roundlabel;
+			$roundstring .= " Flt ".$neg->flight if $neg->flighted > 1;
+			push @rounds, $roundstring;
+
+			$round_debater{$roundstring}{"negcode"} = $neg->code;
+			$round_debater{$roundstring}{"negname"} = $neg->name;
+			$round_debater{$roundstring}{"negid"} = $neg->id;
+			$round_debater{$roundstring}{"negballotid"} = $neg->ballotid;
+			undef $neg;
+		}
 
 		Tab::BallotValue->set_sql(judge_winners => "
 			select distinct ballot_value.*, entry.id as winner, ballot_value.ballot as ballotid
@@ -91,21 +136,24 @@
 		print TEXOUT "\\parbox[t][2.15in][t]{2.2in}{ \n";
 		print TEXOUT "\\onehalfspacing\n";
 
-		my %used;
+		my %seen = (); 
+		@rounds = grep { ! $seen{$_} ++ } @rounds;
 
-		foreach my $entry (@entries) {  
+		foreach my $roundstring (@rounds) { 
+
+			my $id = $round_debater{$roundstring}{"affid"};
+			next unless $id;
+			my $code = $round_debater{$roundstring}{"affcode"};
+			my $name = $round_debater{$roundstring}{"affname"};
+			my $ballotid = $round_debater{$roundstring}{"affballotid"};
 			
-			next unless $entry->side == 1;
-			next if $used{$entry->id."-".$entry->roundname}++;
-
+			print TEXOUT "\\small ";
 			print TEXOUT "{";
-			print TEXOUT "\\bf " if $entry_winner{$entry->id."-".$entry->ballotid};
-			print TEXOUT "\\makebox[1.2in]{\\truncate{1in}{\\scriptsize ";
-			print TEXOUT Tab::texify($entry->code);
-			print TEXOUT "} } }";
-			print TEXOUT Tab::texify(substr($entry->roundlabel,0,5)) if $entry->roundlabel;
-			print TEXOUT Tab::texify("Rnd ".$entry->roundname) unless $entry->roundlabel;
-			print TEXOUT Tab::texify(" Flt ".$entry->flight) if $entry->flighted > 1;
+			print TEXOUT "\\bf " if $entry_winner{$id."-".$ballotid};
+			print TEXOUT "\\makebox[1.6in][l]{";
+			print TEXOUT Tab::texify($code);
+			print TEXOUT " } }";
+			print TEXOUT Tab::texify($roundstring);
 			print TEXOUT "\n\n";
 		}
 
@@ -114,19 +162,21 @@
 		print TEXOUT "\\parbox[t][2.15in][t]{2.2in}{ \n";
 		print TEXOUT "\\onehalfspacing\n";
 
-		foreach my $entry (@entries) {  
+		foreach my $roundstring (@rounds) { 
 
-			next unless $entry->side == 2;
-			next if $used{$entry->id."-".$entry->roundname}++;
-
+			my $id = $round_debater{$roundstring}{"negid"};
+			next unless $id;
+			my $code = $round_debater{$roundstring}{"negcode"};
+			my $name = $round_debater{$roundstring}{"negname"};
+			my $ballotid = $round_debater{$roundstring}{"negballotid"};
+			
+			print TEXOUT "\\small ";
 			print TEXOUT "{";
-			print TEXOUT "\\bf " if $entry_winner{$entry->id."-".$entry->ballotid};
-			print TEXOUT "\\makebox[1.2in]{\\truncate{1in}{\\scriptsize ";
-			print TEXOUT Tab::texify($entry->code);
-			print TEXOUT "} } }";
-			print TEXOUT Tab::texify(substr($entry->roundlabel,0,5)) if $entry->roundlabel;
-			print TEXOUT Tab::texify("Rnd ".$entry->roundname) unless $entry->roundlabel;
-			print TEXOUT Tab::texify("  Fl ".$entry->flight) if $entry->flighted > 1;
+			print TEXOUT "\\bf " if $entry_winner{$id."-".$ballotid};
+			print TEXOUT "\\makebox[1.6in][l]{";
+			print TEXOUT Tab::texify($code);
+			print TEXOUT " } }";
+			print TEXOUT Tab::texify($roundstring);
 			print TEXOUT "\n\n";
 		}
 
@@ -136,7 +186,7 @@
 		print TEXOUT "\\onehalfspacing\n";
 
 		foreach my $strike (sort {$a->type cmp $b->type} $judge->strikes) {
-			print TEXOUT Tab::texify($strike->name);
+			print TEXOUT "\\small ".Tab::texify($strike->name);
 			print TEXOUT "\n\n";
 		}
 
