@@ -2,14 +2,14 @@
 	$account
 	$session
 	$event_id	
-	$school_id => undef
+	$school_id  => undef
 	$student_id => undef
 	$partner_id => undef
-	$waitlist => "0"
-	$title => undef
-	$code => undef
-	$seed => undef
-	$hybrid => undef
+	$waitlist   => "0"
+	$title      => undef
+	$code       => undef
+	$seed       => undef
+	$hybrid     => undef
 </%args>
 <%init>
 
