@@ -1,5 +1,14 @@
 
-	- 
+	- Changed the coloration of the timepicker to be more obvious about the
+	  difference between AM and PM hours.
+
+	- I fixed a bug in the results display that meant instead of figuring out
+	  all the byes that had happened in the division you wanted to display to
+	  help calculate the results, it instead pulled records for literally every
+	  bye that had ever happened in Tabroom's database ever.
+
+	  While that did not make the results incorrect, it did make the process
+	  somewhat ... slow.
 
 	- The truncate-ranks setting formerly would only work with prelim rounds
 	  but not in elims or finals.  Now it will work no matter the type of round
